src/objects/Set_Time__c.object
<CustomObject>
    <description>Junction Object to make many to many relationship between Stage and Band</description>
    <fields>
        <fullName>Band__c</fullName>
        <description>Master relationship with Band</description>
        <label>Band</label>
        <referenceTo>Band__c</referenceTo>
        <relationshipLabel>Set Times</relationshipLabel>
        <relationshipName>Set_Times</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <description>master relation with Stage</description>
        <label>Stage</label>
        <referenceTo>Stage__c</referenceTo>
        <relationshipLabel>Set Times</relationshipLabel>
        <relationshipName>Set_Times</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>In Review</fullName>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <description>time for stage and band</description>
        <label>Time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>09 AM</fullName>
                </value>
                <value>
                    <fullName>10 AM</fullName>
                </value>
                <value>
                    <fullName>11 AM</fullName>
                </value>
                <value>
                    <fullName>12 PM</fullName>
                </value>
                <value>
                    <fullName>01 PM</fullName>
                </value>
                <value>
                    <fullName>02 PM</fullName>
                </value>
                <value>
                    <fullName>03 PM</fullName>
                </value>
                <value>
                    <fullName>04 PM</fullName>
                </value>
                <value>
                    <fullName>05 PM</fullName>
                </value>
                <value>
                    <fullName>06 PM</fullName>
                </value>
                <value>
                    <fullName>07 PM</fullName>
                </value>
                <value>
                    <fullName>08 PM</fullName>
                </value>
                <value>
                    <fullName>09 PM</fullName>
                </value>
                <value>
                    <fullName>10 PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Set Time</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ST-{0000}</displayFormat>
        <label>Set Time Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Set Times</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>